[gd_scene load_steps=3 format=2]

[ext_resource path="res://fatesong/resources/menus/title.png" type="Texture" id=1]
[ext_resource path="res://fatesong/source/menus/menu.gd" type="Script" id=2]

[node name="TitleScreen" type="MarginContainer"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95

[node name="UI" type="VBoxContainer" parent="."]
margin_right = 921.0
margin_bottom = 540.0

[node name="Title" type="TextureRect" parent="UI"]
margin_right = 921.0
margin_bottom = 67.0
texture = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="UI"]
margin_top = 71.0
margin_right = 921.0
margin_bottom = 187.0
script = ExtResource( 2 )

[node name="NewGame" type="Button" parent="UI/Menu"]
margin_right = 921.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadGame" type="Button" parent="UI/Menu"]
margin_top = 24.0
margin_right = 921.0
margin_bottom = 44.0
text = "Load Game"

[node name="About" type="Button" parent="UI/Menu"]
margin_top = 48.0
margin_right = 921.0
margin_bottom = 68.0
text = "About"

[node name="HowToPlay" type="Button" parent="UI/Menu"]
margin_top = 72.0
margin_right = 921.0
margin_bottom = 92.0
text = "How to Play"

[node name="Quit" type="Button" parent="UI/Menu"]
margin_top = 96.0
margin_right = 921.0
margin_bottom = 116.0
text = "Quit"
